chore: update FileHelper.java